# mcp_project

./: .gitignore  README.md  agent.py  db_utils_mcp_server.py  pyproject.toml  streamlit_app.py
data/: csv_to_parquet.py  schema.txt
