[project]
name = "mcp-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair<5",
    "duckdb>=1.4.4",
    "fastmcp>=2.14.4",
    "fastparquet>=2025.12.0",
    "langchain>=1.2.7",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.7",
    "markdown-pdf>=1.10",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "streamlit>=1.19.0",
]
